--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@react-keycloak/web": "^3.4.0",
     "axios": "^1.11.0",
+    "keycloak-js": "^26.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0"
